// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneNumberInput should render correctly 1`] = `
<div
  class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          id="input-4"
          type="text"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <span
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show country code prefix hint: hide hint 1`] = `
<div
  class="v-input v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light v-text-field primary--text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          id="input-11"
          type="text"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light primary--text"
      >
        <span
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show country code prefix hint: show hint 1`] = `
<div
  class="v-input v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light v-text-field primary--text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          id="input-11"
          type="text"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <span
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        >
          <div
            class="v-messages__message"
          >
            It is recommended to supply the country calling code, e.g. +49.
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show error 1`] = `
<div
  class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty theme--light v-text-field error--text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          id="input-17"
          type="text"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light error--text"
      >
        <span
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        >
          <div
            class="v-messages__message"
          >
            Invalid phone number.
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;
